adjustment to desktop and mobile layout

--- a/pages/eventos.html
+++ b/pages/eventos.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html>
-	<head>
+
+<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Eventos Teocráticos | Congregação Caboto</title>
@@ -11,26 +12,26 @@
 
 	<link rel="shortcut icon" href="../assets/images/favicon.ico" type="image/x-icon">
 
-  	<!-- Facebook and Twitter integration -->
-	<meta property="og:title" content=""/>
-	<meta property="og:image" content=""/>
-	<meta property="og:url" content=""/>
-	<meta property="og:site_name" content=""/>
-	<meta property="og:description" content=""/>
+	<!-- Facebook and Twitter integration -->
+	<meta property="og:title" content="" />
+	<meta property="og:image" content="" />
+	<meta property="og:url" content="" />
+	<meta property="og:site_name" content="" />
+	<meta property="og:description" content="" />
 	<meta name="twitter:title" content="" />
 	<meta name="twitter:image" content="" />
 	<meta name="twitter:url" content="" />
 	<meta name="twitter:card" content="" />
 
 	<link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400,500,700,800" rel="stylesheet">
-	
+
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="../assets/css/animate.css">
 	<!-- Icomoon Icon Fonts-->
 	<link rel="stylesheet" href="../assets/css/icomoon.css">
 	<!-- Bootstrap  -->
 	<link rel="stylesheet" href="../assets/css/bootstrap.css">
-	
+
 	<!-- Theme style  -->
 	<link rel="stylesheet" href="../assets/css/style.css">
 
@@ -41,13 +42,15 @@
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
 
-	</head>
-	<body class="single">
-		
+</head>
+
+<body class="single">
+
 	<div class="fh5co-loader"></div>
-	
+
 	<div id="page">
-		<div id="fh5co-aside" style="background-image: url(../assets/images/image_2.jpg)" data-stellar-background-ratio="0.5">
+		<div id="fh5co-aside" style="background-image: url(../assets/images/image_2.jpg)"
+			data-stellar-background-ratio="0.5">
 			<div class="overlay"></div>
 			<nav role="navigation">
 				<ul>
@@ -57,7 +60,7 @@
 			<div class="page-title">
 				<img src="../assets/images/person_1.jpg" alt="Eventos Teocraticos">
 				<span>2024</span>
-				<h2>Eventos Especiais Teocráticos</h2>
+				<h3>Eventos Especiais Teocráticos</h3>
 			</div>
 		</div>
 
@@ -69,7 +72,7 @@
 						<div class="display-tc">
 							<div>
 								<span>Assembleias e Congressos</span>
-								<h2>Informações sobre</h2>
+								<h3>Informações sobre local, data e hora</h3>
 							</div>
 						</div>
 					</div>
@@ -82,7 +85,7 @@
 						<div class="display-tc">
 							<div>
 								<span>Outros Eventos Especiais</span>
-								<h2>Visita do Superintendente, Reuniões Especiais, etc...</h2>
+								<h3>Semana da Visita, Reuniões Especiais e Celebração</h3>
 							</div>
 						</div>
 					</div>
@@ -91,26 +94,35 @@
 		</div>
 
 		<div id="fh5co-main-content">
-			<div class="fh5co-post"> 
+			<div class="fh5co-post">
 				<div class="fh5co-entry padding">
 					<div class="anuncios">
-						<h3><a name="congresso"><strong>Anúnio Sobre Congresso Regional das Testemunhas de Jeová</strong></a></h3>
-						<h4>O Tema do Nosso Próximo Congresso é <a href="https://www.jw.org/pt/testemunhas-de-jeova/congressos/" target="_blank">"Declare as Boas Novas!"</a></h4>
+						<h3><a name="congresso"><strong>Anúnio Sobre Congresso Regional das Testemunhas de
+									Jeová</strong></a></h3>
+						<h4>O Tema do Nosso Próximo Congresso é <a
+								href="https://www.jw.org/pt/testemunhas-de-jeova/congressos/" target="_blank">"Declare
+								as Boas Novas!"</a></h4>
 						<p>Prezados irmãos,</p>
-						<p style="padding-left: 40px;">A Congregação Caboto assistirá o Congresso no final de semana de <strong>26 a 28 de julho de 2024</strong>.
-							O programa começará as 09:00h no Auditório A do Salão de Assembleias de Camaçari.</p>
-						<p><a href="https://www.jw.org/pt/biblioteca/livros/programa-congresso-2024/" target="_blank">Programa do Congresso</a></p>
+						<p style="padding-left: 40px;">A Congregação Caboto assistirá o Congresso no final de semana de
+							<strong>26 a 28 de julho de 2024</strong>.
+							O programa começará as 09:00h no Auditório A do Salão de Assembleias de Camaçari.
+						</p>
+						<p><a href="https://www.jw.org/pt/biblioteca/livros/programa-congresso-2024/"
+								target="_blank">Programa do Congresso</a></p>
 					</div>
 				</div>
 			</div>
 
-			<div class="fh5co-post"> 
+			<div class="fh5co-post">
 				<div class="fh5co-entry padding">
 					<div class="anuncios">
-						<h3><a name="visita"><strong>Anúncio Sobre a Visita do Superintendente de Circuito</strong></a></h3>
+						<h3><a name="visita"><strong>Anúncio Sobre a Visita do Superintendente de Circuito</strong></a>
+						</h3>
 						<p>Prezados irmãos,</p>
-						<p style="padding-left: 40px;">Temos o prazer de informá-los sobre a próxima visita do Superintendente de Circuito.
-						<em>Data da visita:</em><strong> de 30 de Julho a 04 de Agosto de 2024.</strong></p>
+						<p style="padding-left: 40px;">Temos o prazer de informá-los sobre a próxima visita do
+							Superintendente de Circuito.
+							<em>Data da visita:</em><strong> de 30 de Julho a 04 de Agosto de 2024.</strong>
+						</p>
 						<p>Superintendente de Circuito - <strong>Divanildo Mercês</strong></p>
 					</div>
 				</div>
@@ -124,10 +136,13 @@
 		</div>
 	</footer>
 
+	<div class="gotohome js-top">
+		<a href="../index.html"><i class="icon-home"></i></a>
+	</div>
 	<div class="gototop js-top">
 		<a href="#" class="js-gotop"><i class="icon-arrow-up"></i></a>
 	</div>
-	
+
 	<!-- jQuery -->
 	<script src="../assets/js/jquery.min.js"></script>
 	<!-- jQuery Easing -->
@@ -141,6 +156,6 @@
 	<!-- Main -->
 	<script src="../assets/js/main.js"></script>
 
-	</body>
-</html>
+</body>
 
+</html>
