--- a/pages/mecanicas.html
+++ b/pages/mecanicas.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html>
-	<head>
+
+<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Atividades Mecânicas | Congregação Caboto</title>
@@ -11,26 +12,26 @@
 
 	<link rel="shortcut icon" href="../assets/images/favicon.ico" type="image/x-icon">
 
-  	<!-- Facebook and Twitter integration -->
-	<meta property="og:title" content=""/>
-	<meta property="og:image" content=""/>
-	<meta property="og:url" content=""/>
-	<meta property="og:site_name" content=""/>
-	<meta property="og:description" content=""/>
+	<!-- Facebook and Twitter integration -->
+	<meta property="og:title" content="" />
+	<meta property="og:image" content="" />
+	<meta property="og:url" content="" />
+	<meta property="og:site_name" content="" />
+	<meta property="og:description" content="" />
 	<meta name="twitter:title" content="" />
 	<meta name="twitter:image" content="" />
 	<meta name="twitter:url" content="" />
 	<meta name="twitter:card" content="" />
 
 	<link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400,500,700,800" rel="stylesheet">
-	
+
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="../assets/css/animate.css">
 	<!-- Icomoon Icon Fonts-->
 	<link rel="stylesheet" href="../assets/css/icomoon.css">
 	<!-- Bootstrap  -->
 	<link rel="stylesheet" href="../assets/css/bootstrap.css">
-	
+
 	<!-- Theme style  -->
 	<link rel="stylesheet" href="../assets/css/style.css">
 
@@ -41,13 +42,15 @@
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
 
-	</head>
-	<body class="single">
-		
+</head>
+
+<body class="single">
+
 	<div class="fh5co-loader"></div>
-	
+
 	<div id="page">
-		<div id="fh5co-aside" style="background-image: url(../assets/images/image_2.jpg)" data-stellar-background-ratio="0.5">
+		<div id="fh5co-aside" style="background-image: url(../assets/images/image_2.jpg)"
+			data-stellar-background-ratio="0.5">
 			<div class="overlay"></div>
 			<nav role="navigation">
 				<ul>
@@ -57,23 +60,23 @@
 			<div class="page-title">
 				<img src="../assets/images/person_1.jpg" alt="Atividades Mecanicas">
 				<span>Maio de 2024</span>
-				<h2>Designações das Atividades nas Reuniões - presidência, leitores e mecânicas</h2>
+				<h3>Designações das Atividades nas Reuniões - presidência, leitores e mecânicas</h3>
 			</div>
 		</div>
 
 		<div class="fh5co-navigation">
 			<div class="fh5co-cover prev fh5co-cover-sm" style="background-image: url(../assets/images/project-4.jpg)">
-				<div class="overlay"></div>	
+				<div class="overlay"></div>
 				<a class="copy" href="#mecanicas">
 					<div class="display-t">
 						<div class="display-tc">
 							<div>
 								<span>Atividades Mecânicas</span>
-								<h2>Indicadores, Microfones, Assistente de Palco</h2>
+								<h3>Indicadores, Microfones, Assistente de Palco</h3>
 							</div>
 						</div>
 					</div>
-				</a>	
+				</a>
 			</div>
 			<div class="fh5co-cover next fh5co-cover-sm" style="background-image: url(../assets/images/project-5.jpg)">
 				<div class="overlay"></div>
@@ -82,11 +85,11 @@
 						<div class="display-tc">
 							<div>
 								<span>Atividades de Ensino</span>
-								<h2>Leitura de A Sentinela e Presidência aos Sábados</h2>
+								<h3>Leitura e Presidência</h3>
 							</div>
 						</div>
 					</div>
-				</a>	
+				</a>
 			</div>
 		</div>
 
@@ -96,119 +99,120 @@
 					<h2 style="text-align: center;"><a name="mecanicas"><strong>Atividades Mecânicas</strong></a></h2>
 					<table class="table table-striped">
 						<thead class="thead-dark">
-						  <tr>
-							<th scope="col">Data</th>
-							<th scope="col">Palco</th>
-							<th scope="col">Indicador</th>
-							<th scope="col">Microfone 1</th>
-							<th scope="col">Microfone 2</th>
-						  </tr>
+							<tr>
+								<th scope="col">Data</th>
+								<th scope="col">Palco</th>
+								<th scope="col">Indicador</th>
+								<th scope="col">Microfone 1</th>
+								<th scope="col">Microfone 2</th>
+							</tr>
 						</thead>
 						<tbody>
-						  <tr>
-							<th scope="row">Quinta-feira - 01/05</th>
-							<td>Elísio</td>
-							<td>Raimundo</td>
-							<td>Dielson</td>
-							<td>Pedro</td>
-						  </tr>
-						  <tr>
-							<th scope="row">Sábado - 04/05</th>
-							<td>Dielson</td>
-							<td>Vitor</td>
-							<td>Raimundo</td>
-							<td>Claudemiro/Jonatan</td>
-						  </tr>
-						  <tr>
-							<th scope="row">Quinta-feira - 08/05</th>
-							<td>Elísio</td>
-							<td>Raimundo</td>
-							<td>Pedro</td>
-							<td>Mário</td>
-						  </tr>
-						  <tr>
-							<th scope="row">Sábado - 11/05</th>
-							<td>Vitor</td>
-							<td>Raimundo</td>
-							<td>Dielson</td>
-							<td>Claudemiro</td>
-						  </tr>
-						  <tr>
-							<th scope="row">Quinta-feira - 15/05</th>
-							<td>Elísio</td>
-							<td>Dielson</td>
-							<td>Claudemiro/Jonatan</td>
-							<td>Pedro</td>
-						  </tr>
-						  <tr>
-							<th scope="row">Sábado - 18/05</th>
-							<td>Elísio</td>
-							<td>Raimundo</td>
-							<td>Vitor</td>
-							<td>Dielson</td>
-						  </tr>
-						  <tr>
-							<th scope="row">Quinta-feira - 22/05</th>
-							<td>Dielson</td>
-							<td>Elísio</td>
-							<td>Vitor</td>
-							<td>Claudemiro</td>
-						  </tr>
-						  <tr>
-							<th scope="row">Sábado - 25/05</th>
-							<td>Elísio</td>
-							<td>Raimundo</td>
-							<td>Dielson</td>
-							<td>Mário/Jonatan</td>
-						  </tr>
-						  <tr>
-							<th scope="row">Quinta-feira - 29/05</th>
-							<td>Mário</td>
-							<td>Raimundo</td>
-							<td>Claudemiro</td>
-							<td>Pedro</td>
-						  </tr>
+							<tr>
+								<th scope="row">Quinta-feira - 01/05</th>
+								<td>Elísio</td>
+								<td>Raimundo</td>
+								<td>Dielson</td>
+								<td>Pedro</td>
+							</tr>
+							<tr>
+								<th scope="row">Sábado - 04/05</th>
+								<td>Dielson</td>
+								<td>Vitor</td>
+								<td>Raimundo</td>
+								<td>Claudemiro/Jonatan</td>
+							</tr>
+							<tr>
+								<th scope="row">Quinta-feira - 08/05</th>
+								<td>Elísio</td>
+								<td>Raimundo</td>
+								<td>Pedro</td>
+								<td>Mário</td>
+							</tr>
+							<tr>
+								<th scope="row">Sábado - 11/05</th>
+								<td>Vitor</td>
+								<td>Raimundo</td>
+								<td>Dielson</td>
+								<td>Claudemiro</td>
+							</tr>
+							<tr>
+								<th scope="row">Quinta-feira - 15/05</th>
+								<td>Elísio</td>
+								<td>Dielson</td>
+								<td>Claudemiro/Jonatan</td>
+								<td>Pedro</td>
+							</tr>
+							<tr>
+								<th scope="row">Sábado - 18/05</th>
+								<td>Elísio</td>
+								<td>Raimundo</td>
+								<td>Vitor</td>
+								<td>Dielson</td>
+							</tr>
+							<tr>
+								<th scope="row">Quinta-feira - 22/05</th>
+								<td>Dielson</td>
+								<td>Elísio</td>
+								<td>Vitor</td>
+								<td>Claudemiro</td>
+							</tr>
+							<tr>
+								<th scope="row">Sábado - 25/05</th>
+								<td>Elísio</td>
+								<td>Raimundo</td>
+								<td>Dielson</td>
+								<td>Mário/Jonatan</td>
+							</tr>
+							<tr>
+								<th scope="row">Quinta-feira - 29/05</th>
+								<td>Mário</td>
+								<td>Raimundo</td>
+								<td>Claudemiro</td>
+								<td>Pedro</td>
+							</tr>
 						</tbody>
 					</table>
 				</div>
 
 				<div class="fh5co-entry padding">
-					<h2 style="text-align: center;"><a name="ensino"><strong>Presidência aos Sábados e Leitor de A Sentinela</strong></a></h2>
+					<h2 style="text-align: center;"><a name="ensino"><strong>Presidência aos Sábados e Leitor de A
+								Sentinela</strong></a></h2>
 					<table class="table table-striped">
 						<thead class="thead-dark">
-						  <tr>
-							<th scope="col">Data</th>
-							<th scope="col">Presidente</th>
-							<th scope="col">Leitor de A Sentinela</th>
-						  </tr>
+							<tr>
+								<th scope="col">Data</th>
+								<th scope="col">Presidente</th>
+								<th scope="col">Leitor de A Sentinela</th>
+							</tr>
 						</thead>
 						<tbody>
-						  <tr>
-							<th scope="row">04/05</th>
-							<td>Elísio Chagas</td>
-							<td>Claudemiro Rodrigues</td>
-						  </tr>
-						  <tr>
-							<th scope="row">11/05</th>
-							<td>Mário Júnior</td>
-							<td>Marcos Vitor</td>
-						  </tr>						  
-						  <tr>
-							<th scope="row">18/05</th>
-							<td>José Raimundo</td>
-							<td>Claudemiro Rodrigues</td>
-						  </tr>						  
-						  <tr>
-							<th scope="row">25/05</th>
-							<td>Paulo Henrique</td>	
-							<td>Dielson Paz</td>
-						  </tr>						  
+							<tr>
+								<th scope="row">04/05</th>
+								<td>Elísio Chagas</td>
+								<td>Claudemiro Rodrigues</td>
+							</tr>
+							<tr>
+								<th scope="row">11/05</th>
+								<td>Mário Júnior</td>
+								<td>Marcos Vitor</td>
+							</tr>
+							<tr>
+								<th scope="row">18/05</th>
+								<td>José Raimundo</td>
+								<td>Claudemiro Rodrigues</td>
+							</tr>
+							<tr>
+								<th scope="row">25/05</th>
+								<td>Paulo Henrique</td>
+								<td>Dielson Paz</td>
+							</tr>
 						</tbody>
 					</table>
 				</div>
-			</div>			
+			</div>
 		</div>
-	</div>	
+	</div>
 
 	<footer>
 		<div>
@@ -216,10 +220,13 @@
 		</div>
 	</footer>
 
+	<div class="gotohome js-top">
+		<a href="../index.html"><i class="icon-home"></i></a>
+	</div>
 	<div class="gototop js-top">
 		<a href="#" class="js-gotop"><i class="icon-arrow-up"></i></a>
 	</div>
-	
+
 	<!-- jQuery -->
 	<script src="../assets/js/jquery.min.js"></script>
 	<!-- jQuery Easing -->
@@ -233,6 +240,6 @@
 	<!-- Main -->
 	<script src="../assets/js/main.js"></script>
 
-	</body>
-</html>
+</body>
 
+</html>
