--- a/pages/servicos.html
+++ b/pages/servicos.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html>
-	<head>
+
+<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Serviço de Campo | Congregação Caboto</title>
@@ -11,26 +12,26 @@
 
 	<link rel="shortcut icon" href="../assets/images/favicon.ico" type="image/x-icon">
 
-  	<!-- Facebook and Twitter integration -->
-	<meta property="og:title" content=""/>
-	<meta property="og:image" content=""/>
-	<meta property="og:url" content=""/>
-	<meta property="og:site_name" content=""/>
-	<meta property="og:description" content=""/>
+	<!-- Facebook and Twitter integration -->
+	<meta property="og:title" content="" />
+	<meta property="og:image" content="" />
+	<meta property="og:url" content="" />
+	<meta property="og:site_name" content="" />
+	<meta property="og:description" content="" />
 	<meta name="twitter:title" content="" />
 	<meta name="twitter:image" content="" />
 	<meta name="twitter:url" content="" />
 	<meta name="twitter:card" content="" />
 
 	<link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400,500,700,800" rel="stylesheet">
-	
+
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="../assets/css/animate.css">
 	<!-- Icomoon Icon Fonts-->
 	<link rel="stylesheet" href="../assets/css/icomoon.css">
 	<!-- Bootstrap  -->
 	<link rel="stylesheet" href="../assets/css/bootstrap.css">
-	
+
 	<!-- Theme style  -->
 	<link rel="stylesheet" href="../assets/css/style.css">
 
@@ -41,13 +42,15 @@
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
 
-	</head>
-	<body class="single">
-		
+</head>
+
+<body class="single">
+
 	<div class="fh5co-loader"></div>
-	
+
 	<div id="page">
-		<div id="fh5co-aside" style="background-image: url(../assets/images/image_2.jpg)" data-stellar-background-ratio="0.5">
+		<div id="fh5co-aside" style="background-image: url(../assets/images/image_2.jpg)"
+			data-stellar-background-ratio="0.5">
 			<div class="overlay"></div>
 			<nav role="navigation">
 				<ul>
@@ -57,7 +60,7 @@
 			<div class="page-title">
 				<img src="../assets/images/person_1.jpg" alt="Serviço de Campo">
 				<span>2024</span>
-				<h2>Ministério de Campo - Pregação</h2>
+				<h3>Ministério de Campo - Pregação</h3>
 			</div>
 		</div>
 
@@ -69,7 +72,7 @@
 						<div class="display-tc">
 							<div>
 								<span>Programação de Campo</span>
-								<h2>Casa em Casa, Cartas</h2>
+								<h3>Casa em Casa, Cartas</h3>
 							</div>
 						</div>
 					</div>
@@ -82,7 +85,7 @@
 						<div class="display-tc">
 							<div>
 								<span>Testemunho Público</span>
-								<h2>Carrinhos/Display e Testemunho Informal</h2>
+								<h3>Carrinhos e Display</h3>
 							</div>
 						</div>
 					</div>
@@ -91,51 +94,52 @@
 		</div>
 
 		<div id="fh5co-main-content">
-			<div class="fh5co-post"> 
+			<div class="fh5co-post">
 				<div class="fh5co-entry padding">
-					<h2 style="text-align: center;"><a name="semanal"><strong>Programação Semanal de Campo</strong></a></h2>
+					<h2 style="text-align: center;"><a name="semanal"><strong>Programação Semanal de Campo</strong></a>
+					</h2>
 					<table class="table table-striped table-dark">
 						<thead>
-						  <tr>
-							<th scope="col">Dias</th>
-							<th scope="col">Horário</th>
-							<th scope="col">Local</th>
-							<th scope="col">Dirigente</th>
-						  </tr>
+							<tr>
+								<th scope="col">Dias</th>
+								<th scope="col">Horário</th>
+								<th scope="col">Local</th>
+								<th scope="col">Dirigente</th>
+							</tr>
 						</thead>
 						<tbody>
-						  <tr>
-							<th scope="row">Terças-feiras</th>
-							<td>15:00</td>
-							<td>Casa de Elísio</td>
-							<td>Mário</td>
-						  </tr>
-						  <tr>
-							<th scope="row">Quartas-feiras</th>
-							<td>08:50</td>
-							<td>Casa de Josenildo</td>
-							<td>Raimundo</td>
-						  </tr>
-						  <tr>
-							<th scope="row">Sextas-feiras</th>
-							<td>08:50</td>
-							<td>Casa de Simone</td>
-							<td>Raimundo</td>
-						  </tr>
-						  <tr>
-							<th scope="row">Sábados</th>
-							<td>08:50</td>
-							<td>Casa de Jonatas</td>
-							<td>Mário</td>
-						  </tr>
-						  <tr>
-							<th scope="row">Domingos</th>
-							<td>08:50</td>
-							<td>Grupos</td>
-							<td>Grupos</td>
-						  </tr>
+							<tr>
+								<th scope="row">Terças-feiras</th>
+								<td>15:00</td>
+								<td>Casa de Elísio</td>
+								<td>Mário</td>
+							</tr>
+							<tr>
+								<th scope="row">Quartas-feiras</th>
+								<td>08:50</td>
+								<td>Casa de Josenildo</td>
+								<td>Raimundo</td>
+							</tr>
+							<tr>
+								<th scope="row">Sextas-feiras</th>
+								<td>08:50</td>
+								<td>Casa de Simone</td>
+								<td>Raimundo</td>
+							</tr>
+							<tr>
+								<th scope="row">Sábados</th>
+								<td>08:50</td>
+								<td>Casa de Jonatas</td>
+								<td>Mário</td>
+							</tr>
+							<tr>
+								<th scope="row">Domingos</th>
+								<td>08:50</td>
+								<td>Grupos</td>
+								<td>Grupos</td>
+							</tr>
 						</tbody>
-					  </table>
+					</table>
 				</div>
 			</div>
 		</div>
@@ -147,10 +151,13 @@
 		</div>
 	</footer>
 
+	<div class="gotohome js-top">
+		<a href="../index.html"><i class="icon-home"></i></a>
+	</div>
 	<div class="gototop js-top">
 		<a href="#" class="js-gotop"><i class="icon-arrow-up"></i></a>
 	</div>
-	
+
 	<!-- jQuery -->
 	<script src="../assets/js/jquery.min.js"></script>
 	<!-- jQuery Easing -->
@@ -164,6 +171,6 @@
 	<!-- Main -->
 	<script src="../assets/js/main.js"></script>
 
-	</body>
-</html>
+</body>
 
+</html>
