--- a/pages/vida_ministerio.html
+++ b/pages/vida_ministerio.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html>
-	<head>
+
+<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Reuniões Teocráticas | Congregação Caboto</title>
@@ -11,26 +12,26 @@
 
 	<link rel="shortcut icon" href="../assets/images/favicon.ico" type="image/x-icon">
 
-  	<!-- Facebook and Twitter integration -->
-	<meta property="og:title" content=""/>
-	<meta property="og:image" content=""/>
-	<meta property="og:url" content=""/>
-	<meta property="og:site_name" content=""/>
-	<meta property="og:description" content=""/>
+	<!-- Facebook and Twitter integration -->
+	<meta property="og:title" content="" />
+	<meta property="og:image" content="" />
+	<meta property="og:url" content="" />
+	<meta property="og:site_name" content="" />
+	<meta property="og:description" content="" />
 	<meta name="twitter:title" content="" />
 	<meta name="twitter:image" content="" />
 	<meta name="twitter:url" content="" />
 	<meta name="twitter:card" content="" />
 
 	<link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400,500,700,800" rel="stylesheet">
-	
+
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="../assets/css/animate.css">
 	<!-- Icomoon Icon Fonts-->
 	<link rel="stylesheet" href="../assets/css/icomoon.css">
 	<!-- Bootstrap  -->
 	<link rel="stylesheet" href="../assets/css/bootstrap.css">
-	
+
 	<!-- Theme style  -->
 	<link rel="stylesheet" href="../assets/css/style.css">
 
@@ -41,13 +42,15 @@
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
 
-	</head>
-	<body class="single">
-		
+</head>
+
+<body class="single">
+
 	<div class="fh5co-loader"></div>
-	
+
 	<div id="page">
-		<div id="fh5co-aside" style="background-image: url(../assets/images/image_2.jpg)" data-stellar-background-ratio="0.5">
+		<div id="fh5co-aside" style="background-image: url(../assets/images/image_2.jpg)"
+			data-stellar-background-ratio="0.5">
 			<div class="overlay"></div>
 			<nav role="navigation">
 				<ul>
@@ -57,7 +60,7 @@
 			<div class="page-title">
 				<img src="../assets/images/person_1.jpg" alt="Reuniao Vida e Ministerio">
 				<span>Ano de 2024</span>
-				<h2>Programação das Reuniões Vida e Ministério e do Final de Semana</h2>
+				<h3>Programação das Reuniões Vida e Ministério e do Final de Semana</h3>
 			</div>
 		</div>
 
@@ -69,7 +72,7 @@
 						<div class="display-tc">
 							<div>
 								<span>Reunião Vida e Ministério</span>
-								<h2>Designações das Partes</h2>
+								<h3>Designações das Partes</h3>
 							</div>
 						</div>
 					</div>
@@ -82,7 +85,7 @@
 						<div class="display-tc">
 							<div>
 								<span>Reunião de Fim de Semana</span>
-								<h2>Discursos Públicos</h2>
+								<h3>Discursos Públicos</h3>
 							</div>
 						</div>
 					</div>
@@ -91,39 +94,49 @@
 		</div>
 
 		<div id="fh5co-main-content">
-			<div class="fh5co-post"> 
+			<div class="fh5co-post">
 				<div class="fh5co-entry padding">
-					<h1 style="text-align: center;"><a name="designacoes"><strong>Programação Mês de Maio</strong></a></h1>
+					<h1 style="text-align: center;"><a name="designacoes"><strong>Programação Mês de Maio</strong></a>
+					</h1>
 					<div>
-						<img src="../assets/images/data/vm_02-05-2024.jpeg" alt="Reunião Vida e Ministério 02 de Maio de 2024" width="100%" height="100%">
+						<img src="../assets/images/data/vm_02-05-2024.jpeg"
+							alt="Reunião Vida e Ministério 02 de Maio de 2024" width="100%" height="100%">
 					</div>
 					<div>
-						<img src="../assets/images/data/vm_09-05-2024.jpeg" alt="Reunião Vida e Ministério 09 de Maio de 2024" width="100%" height="100%">
+						<img src="../assets/images/data/vm_09-05-2024.jpeg"
+							alt="Reunião Vida e Ministério 09 de Maio de 2024" width="100%" height="100%">
 					</div>
 					<div>
-						<img src="../assets/images/data/vm_16-05-2024.jpeg" alt="Reunião Vida e Ministério 16 de Maio de 2024" width="100%" height="100%">
+						<img src="../assets/images/data/vm_16-05-2024.jpeg"
+							alt="Reunião Vida e Ministério 16 de Maio de 2024" width="100%" height="100%">
 					</div>
 					<div>
-						<img src="../assets/images/data/vm_23-05-2024.jpeg" alt="Reunião Vida e Ministério 02 de Maio de 2024" width="100%" height="100%">
+						<img src="../assets/images/data/vm_23-05-2024.jpeg"
+							alt="Reunião Vida e Ministério 02 de Maio de 2024" width="100%" height="100%">
 					</div>
 					<div>
-						<img src="../assets/images/data/vm_30-05-2024.jpeg" alt="Reunião Vida e Ministério 02 de Maio de 2024" width="100%" height="100%">
+						<img src="../assets/images/data/vm_30-05-2024.jpeg"
+							alt="Reunião Vida e Ministério 02 de Maio de 2024" width="100%" height="100%">
 					</div>
 				</div>
 
 				<div class="fh5co-entry padding">
 					<h1 style="text-align: center;"><strong>Programação Mês de Junho</strong></h1>
 					<div>
-						<img src="../assets/images/data/vm_06-06-2024.jpeg" alt="Reunião Vida e Ministério 02 de Maio de 2024" width="100%" height="100%">
+						<img src="../assets/images/data/vm_06-06-2024.jpeg"
+							alt="Reunião Vida e Ministério 02 de Maio de 2024" width="100%" height="100%">
 					</div>
 					<div>
-						<img src="../assets/images/data/vm_13-06-2024.jpeg" alt="Reunião Vida e Ministério 09 de Maio de 2024" width="100%" height="100%">
+						<img src="../assets/images/data/vm_13-06-2024.jpeg"
+							alt="Reunião Vida e Ministério 09 de Maio de 2024" width="100%" height="100%">
 					</div>
 					<div>
-						<img src="../assets/images/data/vm_20-06-2024.jpeg" alt="Reunião Vida e Ministério 16 de Maio de 2024" width="100%" height="100%">
+						<img src="../assets/images/data/vm_20-06-2024.jpeg"
+							alt="Reunião Vida e Ministério 16 de Maio de 2024" width="100%" height="100%">
 					</div>
 					<div>
-						<img src="../assets/images/data/vm_27-06-2024.jpeg" alt="Reunião Vida e Ministério 02 de Maio de 2024" width="100%" height="100%">
+						<img src="../assets/images/data/vm_27-06-2024.jpeg"
+							alt="Reunião Vida e Ministério 02 de Maio de 2024" width="100%" height="100%">
 					</div>
 				</div>
 			</div>
@@ -134,8 +147,8 @@
 			<table class="table table-striped">
 				<thead>
 					<tr>
-					<th scope="col">Data</th>
-					<th scope="col">Tema</th>
+						<th scope="col">Data</th>
+						<th scope="col">Tema</th>
 					</tr>
 				</thead>
 				<tbody>
@@ -178,7 +191,9 @@
 				</tbody>
 			</table>
 
-			<h4 style="text-align: center;"><strong>Observação:</strong> Alguns temas podem mudar sem aviso prévio de acordo com as circunstâncias - <a href="https://arc.net/l/quote/mixcudip" target="_blank">(Eclesiastes 9:11)</a></h4>
+			<h4 style="text-align: center;"><strong>Observação:</strong> Alguns temas podem mudar sem aviso prévio de
+				acordo com as circunstâncias - <a href="https://arc.net/l/quote/mixcudip" target="_blank">(Eclesiastes
+					9:11)</a></h4>
 		</div>
 	</div>
 
@@ -188,10 +203,13 @@
 		</div>
 	</footer>
 
+	<div class="gotohome js-top">
+		<a href="../index.html"><i class="icon-home"></i></a>
+	</div>
 	<div class="gototop js-top">
 		<a href="#" class="js-gotop"><i class="icon-arrow-up"></i></a>
 	</div>
-	
+
 	<!-- jQuery -->
 	<script src="../assets/js/jquery.min.js"></script>
 	<!-- jQuery Easing -->
@@ -205,6 +223,6 @@
 	<!-- Main -->
 	<script src="../assets/js/main.js"></script>
 
-	</body>
-</html>
+</body>
 
+</html>
