fix layout mobile

--- a/pages/eventos.html
+++ b/pages/eventos.html
@@ -85,7 +85,7 @@
 						<div class="display-tc">
 							<div>
 								<span>Outros Eventos Especiais</span>
-								<h3>Semana da Visita, Reuniões Especiais e Celebração</h3>
+								<h3>Visita S.C, Reuniões Especiais, Celebração</h3>
 							</div>
 						</div>
 					</div>
